# Aegis

./: .gitignore  PROJECT_PLAN.md  run-all.ps1  setup.ps1
.github/workflows/: keep-warm.yml
command-centre/backend/: pyproject.toml
command-centre/frontend/: package-lock.json  package.json
command-centre/gateway/: package-lock.json  package.json
command-centre/supply_trail/: pyproject.toml
command-centre/supply_trail/data/: corridors.json
command-centre/supply_trail/src/aegis_supply_trail/: narrate.py
contracts/: counterfeit.schema.json  scam_detection.schema.json  supply_trail.schema.json
contracts/samples/: counterfeit.sample.json  counterfeit.sample2.json  counterfeit.sample3.json  counterfeit.sample4.json  scam_detection.sample.json  scam_detection.sample2.json
counterfeit-vision/: README.md  pyproject.toml
counterfeit-vision/models/: train_report.json
docs/: Aegis-Submission.docx  architecture.md  crime-pipeline.md  demo-script.md  deployment.md  submission.md
fraud-graph-ml/: README.md  pyproject.toml
fraud-graph-ml/models/: elliptic_benchmark_report.json  ring_eval_report.json  train_report.json
fraud-graph-ml/output/: arms_race_history.csv  fraud_graph.json  ghost_ring.json
fraud-graph-ml/scripts/: extract_real_ring.py
fraud-graph-ml/src/aegis_fraud_graph/: __init__.py  adversarial.py  adversarial_plots.py  adversarial_rl.py  api.py  cli.py  config.py  data.py  demo.py  export.py  ghost_ring.py  graph.py  synth.py
fraud-graph-ml/tests/: test_adversarial.py  test_pipeline.py
fraud-shield-nlp/: README.md  pyproject.toml
(+77 files in other folders)
