[project]
name = "aegis-fraud-graph"
version = "0.1.0"
description = "Aegis Fraud Graph — fraud-ring detection over transaction networks (graph features + XGBoost)"
authors = [{ name = "Prayag", email = "prayagsharma2648@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "typer>=0.15",
    "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
fraud-graph = "aegis_fraud_graph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_fraud_graph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
